--- a/modal/style.css
+++ b/modal/style.css
@@ -1,3 +1,23 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter'sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+input {
+    color: #AEAEAE;
+    width: 307px;
+    height: 37.5px;
+    background: #F6F6F6;
+    border: 1px solid #E8E8E8;
+    border-radius: 8px;
+    margin: 21.4px 26px 0px;
+    padding-left: 16px; 
+}
 .block {
     width: 360px;
     height: 529px;
@@ -7,7 +27,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0px;
 }
 
 .hschool {
@@ -23,92 +42,16 @@
 }
 
 .input_name {
-    margin-top: 44px;
-    margin-left: 26px;
-    margin-right: 26px;
-    padding-left: 16px;
-    width: 307px;
-    height: 37.5px;
-    background: #F6F6F6;
-    border: 1px solid #E8E8E8;
-    border-radius: 8px;
-    font-family: 'Inter'sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
-    color: #AEAEAE;
-}
-
-.input_email {
-    margin-top: 21.4px;
-    margin-left: 26px;
-    margin-right: 26px;
-    padding-left: 16px;
-    width: 307px;
-    height: 37.5px;
-    background: #F6F6F6;
-    border: 1px solid #E8E8E8;
-    border-radius: 8px;
-    font-family: 'Inter'sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
-    color: #AEAEAE;
-}
-
-.input_password {
-    margin-left: 26px;
-    margin-top: 21.4px;
-    margin-right: 26px;
-    padding-left: 16px;
-    width: 307px;
-    height: 37.5px;
-    background: #F6F6F6;
-    border: 1px solid #E8E8E8;
-    border-radius: 8px;
-    font-family: 'Inter'sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
-    color: #AEAEAE;
-}
-
-.input_confpassword {
-    margin-top: 21.4px;
-    margin-left: 26px;
-    margin-right: 26px;
-    padding-left: 16px;
-    width: 307px;
-    height: 37.5px;
-    background: #F6F6F6;
-    border: 1px solid #E8E8E8;
-    border-radius: 8px;
-    font-family: 'Inter'sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
-    color: #AEAEAE;
-    opacity: calc((50% - 19px/2 + 0.71px));
+    margin: 44px 26px 0;
 }
 
 .btn {
-    margin-top: 21.4px;
-    margin-left: 26px;
-    margin-right: 26px;
+    margin: 21.4px 26px 0px;
     height: 37.58092498779297px;
     width: 323px;
     border-radius: 8px;
     background: #8589E4;
     border: 1px solid #4945F9;
-    font-family: 'Inter'sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
     color: #FFFFFF;
 }
 
@@ -124,5 +67,9 @@
     font-size: 12px;
     line-height: 15px;
     color: #000000;
-
+}
+.private_policy b {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    font-weight: 800;
 }
