--- a/dropdown/style.css
+++ b/dropdown/style.css
@@ -1,34 +1,39 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat';
 }
 
-.input {
+.inp_img {
+    height: 60px;
+    width: 280px;
     margin-bottom: 8px;
     display: flex;
     align-items: center;
-    width: 280px;
-    height: 60px;
     background: #FFFFFF;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-}
-
-.input p {
-    padding-left: 16px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
     line-height: 20px;
     color: #666666;
 }
 
-.input img {
+input {
+    padding-left: 16px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    outline: none;
+    border: none;
+    outline-offset: 0;
+}
+
+.img {
+    background-image: url(../dropdown/image/Chevron.png);
     padding-left: 84px;
     width: 10px;
     height: 5px;
-    opacity: 0.8;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .kit {
