--- a/client/modal/style.css
+++ b/client/modal/style.css
@@ -62,3 +62,17 @@ input {
 .private_policy b {
     font: 800 12px 'Montserrat';
 }
+
+.allUsers {
+    width: 346px;
+    border: 1px solid #E8E8E8;
+    border-radius: 8px;
+    margin: 21.4px 26px 0px;
+    padding-left: 16px;
+    outline: none;
+    text-align: left;
+    margin: 20px auto;
+    background-color: rgba(101, 107, 241, 0.22);
+    box-shadow: 0px 8px 50px rgba(0, 0, 0, 0.22);
+    font: 400 12px 'Montserrat';
+}
